src/test/deca/syntax/invalid/obtained_res/toZeroFloatsynt.res
./src/test/deca/syntax/invalid/created/RecognitionErrors/toZeroFloat.deca:9:14: InvalidValueException: Float too small 
